--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <html>
-    <link rel="stylesheet" href="/simple.css">
+    <link rel="stylesheet" href="simple.css">
     <body>
         <h1>Welcome to GollumWeb</h1>
         <script>alert("Gollum")</script>
